src/mhdl/MhdlParser.ts
// Generated from D:/Workspace/undsf/mhrd-projects/mhrd-online/grammar\Mhdl.g4 by ANTLR 4.12.0
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import MhdlListener from "./MhdlListener.js";
import MhdlVisitor from "./MhdlVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class MhdlParser extends Parser {
	public static readonly PART_TYPE = 1;
	public static readonly NAME = 2;
	public static readonly NUMBER = 3;
	public static readonly INPUTS = 4;
	public static readonly OUTPUTS = 5;
	public static readonly PARTS = 6;
	public static readonly WIRES = 7;
	public static readonly CM = 8;
	public static readonly SC = 9;
	public static readonly DT = 10;
	public static readonly CL = 11;
	public static readonly BL = 12;
	public static readonly BR = 13;
	public static readonly TO = 14;
	public static readonly COMMENT = 15;
	public static readonly WS = 16;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_component = 0;
	public static readonly RULE_inputSection = 1;
	public static readonly RULE_outputSection = 2;
	public static readonly RULE_partSection = 3;
	public static readonly RULE_wireSection = 4;
	public static readonly RULE_input = 5;
	public static readonly RULE_output = 6;
	public static readonly RULE_busSize = 7;
	public static readonly RULE_part = 8;
	public static readonly RULE_partName = 9;
	public static readonly RULE_partType = 10;
	public static readonly RULE_wire = 11;
	public static readonly RULE_startPin = 12;
	public static readonly RULE_startBus = 13;
	public static readonly RULE_targetPin = 14;
	public static readonly RULE_targetBus = 15;
	public static readonly RULE_inputPin = 16;
	public static readonly RULE_outputPin = 17;
	public static readonly RULE_inputBus = 18;
	public static readonly RULE_outputBus = 19;
	public static readonly RULE_pinValue = 20;
	public static readonly RULE_pinIndex = 21;
	public static readonly RULE_busIndexStart = 22;
	public static readonly RULE_busIndexEnd = 23;
	public static readonly RULE_inputPinName = 24;
	public static readonly RULE_inputBusName = 25;
	public static readonly RULE_outputPinName = 26;
	public static readonly RULE_outputBusName = 27;
	public static readonly literalNames: (string | null)[] = [ null, null, 
                                                            null, null, 
                                                            "'Inputs:'", 
                                                            "'Outputs:'", 
                                                            "'Parts:'", 
                                                            "'Wires:'", 
                                                            "','", "';'", 
                                                            "'.'", "':'", 
                                                            "'['", "']'", 
                                                            "'->'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "PART_TYPE", 
                                                             "NAME", "NUMBER", 
                                                             "INPUTS", "OUTPUTS", 
                                                             "PARTS", "WIRES", 
                                                             "CM", "SC", 
                                                             "DT", "CL", 
                                                             "BL", "BR", 
                                                             "TO", "COMMENT", 
                                                             "WS" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"component", "inputSection", "outputSection", "partSection", "wireSection", 
		"input", "output", "busSize", "part", "partName", "partType", "wire", 
		"startPin", "startBus", "targetPin", "targetBus", "inputPin", "outputPin", 
		"inputBus", "outputBus", "pinValue", "pinIndex", "busIndexStart", "busIndexEnd", 
		"inputPinName", "inputBusName", "outputPinName", "outputBusName",
	];
	public get grammarFileName(): string { return "Mhdl.g4"; }
	public get literalNames(): (string | null)[] { return MhdlParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return MhdlParser.symbolicNames; }
	public get ruleNames(): string[] { return MhdlParser.ruleNames; }
	public get serializedATN(): number[] { return MhdlParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, MhdlParser._ATN, MhdlParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public component(): ComponentContext {
		let localctx: ComponentContext = new ComponentContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, MhdlParser.RULE_component);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 56;
			this.inputSection();
			this.state = 57;
			this.outputSection();
			this.state = 58;
			this.partSection();
			this.state = 59;
			this.wireSection();
			this.state = 60;
			this.match(MhdlParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public inputSection(): InputSectionContext {
		let localctx: InputSectionContext = new InputSectionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, MhdlParser.RULE_inputSection);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 62;
			this.match(MhdlParser.INPUTS);
			this.state = 63;
			this.input();
			this.state = 68;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===8) {
				{
				{
				this.state = 64;
				this.match(MhdlParser.CM);
				this.state = 65;
				this.input();
				}
				}
				this.state = 70;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 71;
			this.match(MhdlParser.SC);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public outputSection(): OutputSectionContext {
		let localctx: OutputSectionContext = new OutputSectionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, MhdlParser.RULE_outputSection);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 73;
			this.match(MhdlParser.OUTPUTS);
			this.state = 74;
			this.output();
			this.state = 79;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===8) {
				{
				{
				this.state = 75;
				this.match(MhdlParser.CM);
				this.state = 76;
				this.output();
				}
				}
				this.state = 81;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 82;
			this.match(MhdlParser.SC);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public partSection(): PartSectionContext {
		let localctx: PartSectionContext = new PartSectionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, MhdlParser.RULE_partSection);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 84;
			this.match(MhdlParser.PARTS);
			this.state = 85;
			this.part();
			this.state = 90;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===8) {
				{
				{
				this.state = 86;
				this.match(MhdlParser.CM);
				this.state = 87;
				this.part();
				}
				}
				this.state = 92;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 93;
			this.match(MhdlParser.SC);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public wireSection(): WireSectionContext {
		let localctx: WireSectionContext = new WireSectionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, MhdlParser.RULE_wireSection);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 95;
			this.match(MhdlParser.WIRES);
			this.state = 96;
			this.wire();
			this.state = 101;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===8) {
				{
				{
				this.state = 97;
				this.match(MhdlParser.CM);
				this.state = 98;
				this.wire();
				}
				}
				this.state = 103;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 104;
			this.match(MhdlParser.SC);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public input(): InputContext {
		let localctx: InputContext = new InputContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, MhdlParser.RULE_input);
		try {
			this.state = 112;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 106;
				this.inputPinName();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 107;
				this.inputBusName();
				this.state = 108;
				this.match(MhdlParser.BL);
				this.state = 109;
				this.busSize();
				this.state = 110;
				this.match(MhdlParser.BR);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public output(): OutputContext {
		let localctx: OutputContext = new OutputContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, MhdlParser.RULE_output);
		try {
			this.state = 120;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 5, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 114;
				this.outputPinName();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 115;
				this.outputBusName();
				this.state = 116;
				this.match(MhdlParser.BL);
				this.state = 117;
				this.busSize();
				this.state = 118;
				this.match(MhdlParser.BR);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public busSize(): BusSizeContext {
		let localctx: BusSizeContext = new BusSizeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, MhdlParser.RULE_busSize);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 122;
			this.match(MhdlParser.NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public part(): PartContext {
		let localctx: PartContext = new PartContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, MhdlParser.RULE_part);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 124;
			this.partName();
			this.state = 125;
			this.partType();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public partName(): PartNameContext {
		let localctx: PartNameContext = new PartNameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, MhdlParser.RULE_partName);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 127;
			this.match(MhdlParser.NAME);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public partType(): PartTypeContext {
		let localctx: PartTypeContext = new PartTypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, MhdlParser.RULE_partType);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 129;
			this.match(MhdlParser.PART_TYPE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public wire(): WireContext {
		let localctx: WireContext = new WireContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, MhdlParser.RULE_wire);
		try {
			this.state = 139;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 6, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 131;
				this.startPin();
				this.state = 132;
				this.match(MhdlParser.TO);
				this.state = 133;
				this.targetPin();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 135;
				this.startBus();
				this.state = 136;
				this.match(MhdlParser.TO);
				this.state = 137;
				this.targetBus();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public startPin(): StartPinContext {
		let localctx: StartPinContext = new StartPinContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, MhdlParser.RULE_startPin);
		try {
			this.state = 147;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 7, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 141;
				this.pinValue();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 142;
				this.inputPin();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 143;
				this.partName();
				this.state = 144;
				this.match(MhdlParser.DT);
				this.state = 145;
				this.outputPin();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public startBus(): StartBusContext {
		let localctx: StartBusContext = new StartBusContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, MhdlParser.RULE_startBus);
		try {
			this.state = 154;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 8, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 149;
				this.inputBus();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 150;
				this.partName();
				this.state = 151;
				this.match(MhdlParser.DT);
				this.state = 152;
				this.outputBus();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public targetPin(): TargetPinContext {
		let localctx: TargetPinContext = new TargetPinContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, MhdlParser.RULE_targetPin);
		try {
			this.state = 161;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 156;
				this.outputPin();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 157;
				this.partName();
				this.state = 158;
				this.match(MhdlParser.DT);
				this.state = 159;
				this.inputPin();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public targetBus(): TargetBusContext {
		let localctx: TargetBusContext = new TargetBusContext(this, this._ctx, this.state);
		this.enterRule(localctx, 30, MhdlParser.RULE_targetBus);
		try {
			this.state = 168;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 10, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 163;
				this.outputBus();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 164;
				this.partName();
				this.state = 165;
				this.match(MhdlParser.DT);
				this.state = 166;
				this.inputBus();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public inputPin(): InputPinContext {
		let localctx: InputPinContext = new InputPinContext(this, this._ctx, this.state);
		this.enterRule(localctx, 32, MhdlParser.RULE_inputPin);
		try {
			this.state = 176;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 11, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 170;
				this.inputPinName();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 171;
				this.inputBusName();
				this.state = 172;
				this.match(MhdlParser.BL);
				this.state = 173;
				this.pinIndex();
				this.state = 174;
				this.match(MhdlParser.BR);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public outputPin(): OutputPinContext {
		let localctx: OutputPinContext = new OutputPinContext(this, this._ctx, this.state);
		this.enterRule(localctx, 34, MhdlParser.RULE_outputPin);
		try {
			this.state = 184;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 12, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 178;
				this.outputPinName();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 179;
				this.outputBusName();
				this.state = 180;
				this.match(MhdlParser.BL);
				this.state = 181;
				this.pinIndex();
				this.state = 182;
				this.match(MhdlParser.BR);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public inputBus(): InputBusContext {
		let localctx: InputBusContext = new InputBusContext(this, this._ctx, this.state);
		this.enterRule(localctx, 36, MhdlParser.RULE_inputBus);
		try {
			this.state = 194;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 13, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 186;
				this.inputBusName();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 187;
				this.inputBusName();
				this.state = 188;
				this.match(MhdlParser.BL);
				this.state = 189;
				this.busIndexStart();
				this.state = 190;
				this.match(MhdlParser.CL);
				this.state = 191;
				this.busIndexEnd();
				this.state = 192;
				this.match(MhdlParser.BR);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public outputBus(): OutputBusContext {
		let localctx: OutputBusContext = new OutputBusContext(this, this._ctx, this.state);
		this.enterRule(localctx, 38, MhdlParser.RULE_outputBus);
		try {
			this.state = 204;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 14, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 196;
				this.outputBusName();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 197;
				this.outputBusName();
				this.state = 198;
				this.match(MhdlParser.BL);
				this.state = 199;
				this.busIndexStart();
				this.state = 200;
				this.match(MhdlParser.CL);
				this.state = 201;
				this.busIndexEnd();
				this.state = 202;
				this.match(MhdlParser.BR);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public pinValue(): PinValueContext {
		let localctx: PinValueContext = new PinValueContext(this, this._ctx, this.state);
		this.enterRule(localctx, 40, MhdlParser.RULE_pinValue);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 206;
			this.match(MhdlParser.NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public pinIndex(): PinIndexContext {
		let localctx: PinIndexContext = new PinIndexContext(this, this._ctx, this.state);
		this.enterRule(localctx, 42, MhdlParser.RULE_pinIndex);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 208;
			this.match(MhdlParser.NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public busIndexStart(): BusIndexStartContext {
		let localctx: BusIndexStartContext = new BusIndexStartContext(this, this._ctx, this.state);
		this.enterRule(localctx, 44, MhdlParser.RULE_busIndexStart);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 210;
			this.match(MhdlParser.NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public busIndexEnd(): BusIndexEndContext {
		let localctx: BusIndexEndContext = new BusIndexEndContext(this, this._ctx, this.state);
		this.enterRule(localctx, 46, MhdlParser.RULE_busIndexEnd);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 212;
			this.match(MhdlParser.NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public inputPinName(): InputPinNameContext {
		let localctx: InputPinNameContext = new InputPinNameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 48, MhdlParser.RULE_inputPinName);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 214;
			this.match(MhdlParser.NAME);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public inputBusName(): InputBusNameContext {
		let localctx: InputBusNameContext = new InputBusNameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 50, MhdlParser.RULE_inputBusName);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 216;
			this.match(MhdlParser.NAME);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public outputPinName(): OutputPinNameContext {
		let localctx: OutputPinNameContext = new OutputPinNameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 52, MhdlParser.RULE_outputPinName);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 218;
			this.match(MhdlParser.NAME);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public outputBusName(): OutputBusNameContext {
		let localctx: OutputBusNameContext = new OutputBusNameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 54, MhdlParser.RULE_outputBusName);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 220;
			this.match(MhdlParser.NAME);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}


	private static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!MhdlParser.__ATN) {
			MhdlParser.__ATN = new ATNDeserializer().deserialize(MhdlParser._serializedATN);
		}

		return MhdlParser.__ATN;
	}


	static DecisionsToDFA = MhdlParser._ATN.decisionToState.map( (ds: DecisionState, index: number) => new DFA(ds, index) );

}

export class ComponentContext extends ParserRuleContext {
	constructor(parser?: MhdlParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public inputSection(): InputSectionContext {
		return this.getTypedRuleContext(InputSectionContext, 0) as InputSectionContext;
	}
	public outputSection(): OutputSectionContext {
		return this.getTypedRuleContext(OutputSectionContext, 0) as OutputSectionContext;
	}
	public partSection(): PartSectionContext {
		return this.getTypedRuleContext(PartSectionContext, 0) as PartSectionContext;
	}
	public wireSection(): WireSectionContext {
		return this.getTypedRuleContext(WireSectionContext, 0) as WireSectionContext;
	}
	public EOF(): TerminalNode {
		return this.getToken(MhdlParser.EOF, 0);
	}
    public get ruleIndex(): number {
    	return MhdlParser.RULE_component;
	}
	public enterRule(listener: MhdlListener): void {
	    if(listener.enterComponent) {
	 		listener.enterComponent(this);
		}
	}
	public exitRule(listener: MhdlListener): void {
	    if(listener.exitComponent) {
	 		listener.exitComponent(this);
		}
	}
	// @Override
	public accept<Result>(visitor: MhdlVisitor<Result>): Result {
		if (visitor.visitComponent) {
			return visitor.visitComponent(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class InputSectionContext extends ParserRuleContext {
	constructor(parser?: MhdlParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public INPUTS(): TerminalNode {
		return this.getToken(MhdlParser.INPUTS, 0);
	}
	public input_list(): InputContext[] {
		return this.getTypedRuleContexts(InputContext) as InputContext[];
	}
	public input(i: number): InputContext {
		return this.getTypedRuleContext(InputContext, i) as InputContext;
	}
	public SC(): TerminalNode {
		return this.getToken(MhdlParser.SC, 0);
	}
	public CM_list(): TerminalNode[] {
	    	return this.getTokens(MhdlParser.CM);
	}
	public CM(i: number): TerminalNode {
		return this.getToken(MhdlParser.CM, i);
	}
    public get ruleIndex(): number {
    	return MhdlParser.RULE_inputSection;
	}
	public enterRule(listener: MhdlListener): void {
